testdata/positive/type_inference.rs
fn main() {
    let x = 42;      // i32
    let y = 3.14;    // f64
    let z = true;    // bool
    let str = "hello"; // String
}

