testdata/negative/operator_type_error.rs
fn main() {
    let result = "hello" + "world";  // Нельзя складывать строки
}

